[package]
name = "tic_tac_toe"
version = "0.1.0"
authors = ["Parth-bathe0142 <parth.bathe0142@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8"



[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
